--- a/styles_css.css
+++ b/styles_css.css
@@ -36,7 +36,7 @@ nav {
 .logo {
     font-size: 1.8rem;
     font-weight: bold;
-    color: #656765;
+    color: #FCFAF2;
     text-decoration: none;
     transition: all 0.3s ease;
     cursor: pointer;
