--- a/styles_css.css
+++ b/styles_css.css
@@ -392,7 +392,7 @@ main {
 
 /* Footer */
 footer {
-    background: transparent;
+    background: #FCFAF2;
     color: #434343;
     text-align: center;
     padding: 2rem 0;
